
[TestMoveCmd/fails_when_pattern_doesnt_match_any_window - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move foo

Output

Error
 Error: no windows matched the pattern 'foo'

---

[TestMoveCmd/moves_current_focused_window_to_scratchpad_when_empty - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move 

Output
Moving window 5678 | Finder  to scratchpad
Window '5678 | Finder ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/fails_when_getting_all_windows_return_an_erro - 1]
aerospace-scratchpad move test

Output

Error
 Error: unable to get windows: mocked_error

---

[TestMoveCmd/moves_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move Notepad

Output
Moving window 1234 | Notepad  to scratchpad
Window '1234 | Notepad ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/fails_when_moving_a_window_to_scratchpad - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move Finder

Output

Error
Error: Window '5678 | Finder ' already belongs to scratchpad

---

[TestMoveCmd/[dry-run]_move_a_window_to_scratchpad_by_pattern - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1234, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Notepad", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move Notepad --dry-run

Output
[dry-run] FocusNextTilingWindow()
Moving window 1234 | Notepad  to scratchpad
[dry-run] MoveWindowToWorkspace(windowID=1234, workspace=.scratchpad)
[dry-run] SetLayout(windowID=1234, layout=floating)
Window '1234 | Notepad ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/moves_only_the_focused_window_when_multiple_matches_exist - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1111, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move 

Output
Moving window 5678 | Finder  to scratchpad
Window '5678 | Finder ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/[dry-run]_moves_all_windows_with_the_same_app_name_as_the_focused_window_when_--all_is_used - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1111, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move  --all --dry-run

Output
[dry-run] FocusNextTilingWindow()
Moving window 1111 | Finder  to scratchpad
[dry-run] MoveWindowToWorkspace(windowID=1111, workspace=.scratchpad)
[dry-run] SetLayout(windowID=1111, layout=floating)
Window '1111 | Finder ' hidden to scratchpad
Moving window 5678 | Finder  to scratchpad
[dry-run] MoveWindowToWorkspace(windowID=5678, workspace=.scratchpad)
[dry-run] SetLayout(windowID=5678, layout=floating)
Window '5678 | Finder ' hidden to scratchpad

Error
 <nil>
---

[TestMoveCmd/moves_all_windows_with_the_same_app_name_as_the_focused_window_when_--all_is_used - 1]
[]testutils.AeroSpaceTree{
    {
        Windows: {
            {WindowID:1111, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
            {WindowID:5678, WindowTitle:"", WindowLayout:"", WindowParentContainerLayout:"", AppName:"Finder", AppBundleID:"", Workspace:""},
        },
        Workspace:       &workspaces.Workspace{Workspace:"ws1"},
        FocusedWindowID: 5678,
    },
}
aerospace-scratchpad move  --all

Output
Moving window 1111 | Finder  to scratchpad
Window '1111 | Finder ' hidden to scratchpad
Moving window 5678 | Finder  to scratchpad
Window '5678 | Finder ' hidden to scratchpad

Error
 <nil>
---
